<resources>
    <string name="app_name">Mod2Class4</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="buscar">Buscar</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="ejecutar">Ejecutar</string>
    <string name="razon_social">Razón Social</string>
    <string name="ruc">RUC</string>
    <string name="enviar">Enviar</string>
    <string name="correo">Correo</string>
    <string name="direccion">Dirección</string>
    <string name="convertir">Convertir</string>
</resources>
