<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jcodee.mod2class4.fragmentos.ConvertirFragment">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo"
        android:inputType="text" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/direccion"
        android:inputType="text" />

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/convertir" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black" />

</LinearLayout>
