<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jcodee.mod2class4.fragmentos.RegistroPostFragment">

    <Spinner
        android:id="@+id/spUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCuerpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cuerpo"
        android:inputType="text" />

    <Button
        android:id="@+id/btnEjecutar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ejecutar" />

</LinearLayout>
