<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jcodee.mod2class4.fragmentos.FormularioFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etRazonSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/razon_social"
            android:inputType="text" />

        <EditText
            android:id="@+id/etRuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ruc"
            android:inputType="number" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/enviar" />
    </LinearLayout>

</FrameLayout>
