<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jcodee.mod2class4.fragmentos.RegistrarFragment">

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spModulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50" />

        <Spinner
            android:id="@+id/spCiclo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50" />
    </LinearLayout>

    <EditText
        android:id="@+id/etDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:inputType="text" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registrar" />

</LinearLayout>
